# AItradingbot

./: .env.example  .gitignore  API_CONFIG_GUIDE.md  DAIAItradebotopenapi.json  OPTIMIZATION_PLAN.md  README.md  README_NEW.md  REBUILD_PLAN.md  TASK_PROMPT.md  check_gpu.py  deploy.md  pyproject.toml  pytest.ini  requirements.txt  run_all.py  run_alpha.py  test_glm5.py  启动AITradeBot.bat
.claude/: settings.local.json
backend/: main.py
config/: __init__.py  simple.py
core/api/: app.py  errors.py  public_v1.py  realtime.py
core/comms/: __init__.py  discord_broker.py  discord_client.py
core/database/: session.py
core/orchestrator/: __init__.py  dependency_injector.py  model_fallback.py  (+1 more)
docs/: DAILY_REPORT_2026-02-13.md  DISCORD_BOT_GUIDE.md  GLM5_INTEGRATION.md  GLM5_OPTIMIZATION_REPORT.md  PERCEPTION_ENHANCEMENT_REPORT.md  PROJECT_STATUS.md  QUICKSTART_CLAUDE.md  REALTIME_MONITORING.md  STEP7_SUMMARY.md  SUBSCRIBER_OPTIMIZATION.md  architecture.md  web_embed_guide.md  web_widget.js  websocket_client.html
frontend/: REFACTOR_TASK.md  index.html  package-lock.json  package.json  tailwind.config.js
perception/: market_data.py
scripts/: check_api_config.py  demo_classification.py  demo_decision.py  demo_perception.py  init_db.py  manual_trade_flow.py  migrate_db_add_qmt_fields.py  setup_env.py  simulate_hot_news.py  start_discord_bot.py  test_decision.py  test_execution.py  test_perception.py  test_qmt_sync.py  test_token_usage.py  test_trade_event.py  test_websocket.py
shared/: constants.py  logging.py  trading_state.py
tests/: conftest.py
ui/: app.py
(+112 files in other folders)
