[project]
name = "ai-tradebot"
version = "2.0.0"
description = "AI-powered trading bot with GLM-5 core orchestration"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | logs
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "data", "logs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "logs/",
    ".venv/",
    "build/",
    "dist/",
]

# 对特定模块放宽检查
[[tool.mypy.overrides]]
module = [
    "tushare.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["core", "decision", "perception", "storage", "shared", "config"]
